--- a/app/ui/Card/Card.module.scss
+++ b/app/ui/Card/Card.module.scss
@@ -1,5 +1,6 @@
 .card {
   width: calc((100% - 16px * 5) / 6);
+  min-width: 150px;
   position: relative;
   border-radius: 16px;
   overflow: hidden;
