--- a/app/show/page.module.scss
+++ b/app/show/page.module.scss
@@ -1,10 +1,14 @@
 .cards{
   display: flex;
   flex-direction: column;
-  height: 120vh;
+  height: 150vh;
   width: 100%;
   gap: 16px;
   align-items: center;
   flex-wrap: wrap;
   margin-top: 16px;
+  .cardFrame{
+    width: calc((100% - 16px * 5) / 6);
+    min-width: 150px;
+  }
 }
