--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -1,24 +1,68 @@
 .container {
-  // background: pink;
   width: 100vw;
   height: 100vh;
-  .background {
-    width: 100%;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  .bgFrame {
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-radius: 50%;
+    overflow: hidden;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url(/assets/backgroundImage_day.png);
-    background-size: cover;
-    background-position-y: 30%;
-    animation: bgMove 60s infinite linear;
-    .logo {
+    animation: bgFrameOpen 2s forwards ease-in-out;
+    animation-delay: 3.5s;
+    .background {
+      min-width: 100vw;
+      min-height: 100vh;
+      background-image: url(/assets/backgroundImage_day.png);
+      background-size: cover;
+      background-position-y: 30%;
+      animation: bgMove 60s infinite linear;
+      animation-delay: 3.5s;
     }
-    .logoContain {
-      width: 35vw;
-      max-width: 360px;
-      min-width: 240px;
+    .loginForm {
+      z-index: 10;
+      position: absolute;
+      top: 50%;
+    }
+  }
+  .framePosition {
+    position: absolute;
+    width: 360px;
+    height: 360px;
+    top: 20%;
+    // background: pink;
+    .frame {
+      overflow: hidden;
+      animation: frameOpen 1.5s forwards linear;
+      // background: skyblue;
+      width: 100%;
+      height: 100%;
+      position: relative;
+    }
+    .logo {
+      position: absolute;
+      min-width: 360px;
+      animation: logoColorChange 0.5s forwards;
+      animation-delay: 3.8s;
+    }
+    .logoTop {
+      animation: logoTopAppear 1s forwards ease-in-out;
+      animation-delay: 1.3s;
+      opacity: 0;
+      transform: translateY(60px);
+    }
+    .logoText {
+      animation: logoTextAppear 1s forwards;
+      animation-delay: 2.3s;
+      opacity: 0;
+      transform: translateY(30px);
     }
   }
 }
@@ -29,5 +73,62 @@
   90%,
   100% {
     background-position-y: 80%;
+  }
+}
+@keyframes frameOpen {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 360px;
+  }
+}
+@keyframes logoTopAppear {
+  0% {
+    opacity: 0;
+    transform: translateY(60px);
+  }
+  30% {
+    opacity: 1;
+    transform: translateY(-15px);
+  }
+  50% {
+    opacity: 1;
+    transform: translateY(5px);
+  }
+  70% {
+    opacity: 1;
+    transform: translateY(-5px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes logoTextAppear {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+@keyframes bgFrameOpen {
+  0% {
+    width: 0;
+    height: 0;
+  }
+  100% {
+    width: 3000px;
+    height: 3000px;
+  }
+}
+@keyframes logoColorChange {
+  0% {
+  }
+  100% {
+    filter: brightness(0) invert(1);
   }
 }
