--- a/app/ui/Card/Card.module.scss
+++ b/app/ui/Card/Card.module.scss
@@ -1,5 +1,5 @@
 .card {
-  width: calc((100% - 16px * 5) / 6);
+  width: 100%;
   min-width: 150px;
   position: relative;
   border-radius: 16px;
@@ -43,6 +43,9 @@
       border-radius: 4px;
     }
     .place {
+      font-size: 0.8em;
+    }
+    .describe {
       font-size: 0.8em;
     }
   }
